--- a/web_store/src/main/resources/application.properties
+++ b/web_store/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/SpringData
 spring.datasource.username=root
 spring.datasource.password=Dzoni.3892
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
+
+server.error.include-message=always
